--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para o Amor da Minha Vida 💜</title>
+    <title>Para Ramy 💜</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <div id="smile-button">😊 hihi!</div>
@@ -12,7 +12,7 @@
       <div class="container">
         <h1 id="girlfriend-name">Para minha doce Ramy🧁</h1>
         <p class="subtitle">
-          Cada segundo ao seu lado é como um passo mais perto do amor que eu
+          Cada segundo ao seu lado é como um passo mais perto do que eu
           sempre sonhei 💞
         </p>
       </div>
@@ -21,6 +21,7 @@
     <div class="container">
       <div class="introduction">
         <h2>Leia antes de continuar, boboca.</h2>
+        <p>Se você chegou aqui então conseguiu ler o QR code kkkkkkk, que bom!</p>
         <p>
           Eu não sou bom com palavras kkkkkkkkkk, mas fiz algo muito legal pra
           você e espero que goste.
@@ -35,13 +36,13 @@
           ou clichê, tipo aqueles mimimi de sempre kksksks.
         </p>
         <p>
-          Então presta atenção em cada detalhe e vai respondendo as perguntinhas
+          Então presta atenção em cada detalhe e vai respondendo as perguntinhas NA SINCERIDADE
           pra ver umas coisinhas escondidas hehe.
         </p>
         <p>
           Aaaa, já ia esquecendo! Bem do seu ladinho tem um botão de sorriso —
-          quero que clique nele toda vez que sorrir (pode mover ele) com algo
-          aqui ou quando achar algo tipo "wow" ksksksk 💖.
+          quero que clique nele toda vez que sorrir com algo
+          aqui ou quando achar algo tipo "wow" ksksksk.
         </p>
         <p>Bom, já falei demais... pode começar! ✨</p>
       </div>
@@ -89,11 +90,11 @@
           Você tá lendo algo que eu comecei em maio, e provavelmente nos outros
           dias futuros eu ainda vou escrever mais aqui ksksk. Eu não sei se
           mudei algum pensamento ou algo aqui, mas tenho certeza que melhorei
-          cada coisinha e, com certeza, me apaixonei ainda mais por você.
+          cada coisinha e, com certeza, me aproximei ainda mais de você.
         </p>
         <p>
           E sim, escrevi mais coisas "gay" akakaka. Aff (ksksksks), pode
-          continua 💖
+          continuar 💖
         </p>
       </div>
 
