--- a/templates/index.html
+++ b/templates/index.html
@@ -59,18 +59,9 @@
         <div id="questionContent"></div>
       </div>
 
-       <div class="envelope-container">
-        <div class="envelope" onclick="toggleEnvelope()">
-            <div class="envelope-flap"></div>
-            <div class="envelope-front"></div>
-            <div class="envelope-paper">
-                <div class="letter-content" id="letterContent">
-                    <h2 id="letterTitle">Primeiro responda</h2>
-                    <p id="letterText"></p>
-                </div>
-            </div>
-            <div class="envelope-back"></div>
-        </div>
+       <div class="cartas-respostas">
+
+       </div>
       </div>
 
       
@@ -83,25 +74,23 @@
           Agora vou explicar o motivo de querer tirar foto com você toda vez que
           nos encontramos ksksks. É claro que eu quero registrar cada momento
           com você, mas um dos motivos era pra selecionar cada foto nossa e
-          colocar aqui ksksks. Além de criar a edição, acho que já disse pra
-          você que eu ia fazer isso... Bem doido, né?
+          colocar aqui ksksks.
         </p>
         <p>
           Você tá lendo algo que eu comecei em maio, e provavelmente nos outros
           dias futuros eu ainda vou escrever mais aqui ksksk. Eu não sei se
           mudei algum pensamento ou algo aqui, mas tenho certeza que melhorei
-          cada coisinha e, com certeza, me aproximei ainda mais de você.
+          cada coisinha e, com certeza, falei muita coisa gay kksksk.
         </p>
         <p>
-          E sim, escrevi mais coisas "gay" akakaka. Aff (ksksksks), pode
-          continuar 💖
+          pode continuar, boboca.
         </p>
       </div>
 
       <!-- Botão para revelar a galeria -->
       <div class="reveal-gallery-button-container">
         <button class="reveal-gallery-button" onclick="mostrarGaleria()">
-          📸 Clica aqui pra ver algo nosso 💕
+          📸 Clica aqui curiosa kkkkkkk
         </button>
       </div>
 
@@ -168,7 +157,7 @@
     <footer>
       <div class="container">
         <p class="footer-message">
-          Se você chegou até aqui, saiba que você é alguém que quero levar para
+          Se você chegou até aqui, saiba que você é alguém muito especial,incrivel e que eu quero levar para
           o resto da minha vida
         </p>
         <button class="surprise-btn" onclick="window.location.href='jogo.html'">
