--- a/templates/jogo.html
+++ b/templates/jogo.html
@@ -13,8 +13,8 @@
           <p id="alertMessage">Mensagem</p>
         </div>
       </div>
-      <h2 id="pergunta">Você gosta de mim? 😊</h2>
-      <button onclick="responder('sim')">Sim</button>
+      <h2 id="pergunta">Quer ver o que tem aqui?? 😊</h2>
+      <button onclick="responder('nao')">Não</button>
       <button onclick="responder('claro')">Claro!</button>
       <p id="mensagemFinal"></p>
     </div>
