--- a/templates/index.html
+++ b/templates/index.html
@@ -1,176 +1,186 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Ramy 💜</title>
-    <link rel="stylesheet" href="../css/style.css" />
-  </head>
-  <div id="smile-button">😊 hihi!</div>
-  <body>
-    <header>
-      <div class="container">
-        <h1 id="girlfriend-name">Para minha doce Ramy🧁</h1>
-        <p class="subtitle">
-          Cada segundo ao seu lado é como um passo mais perto do que eu
-          sempre sonhei 💞
-        </p>
-      </div>
-    </header>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Para Ramy 💜</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<div id="smile-button">😊 hihi!</div>
+
+<body>
+  <audio id="background-audio" autoplay preload="auto" src="../assets/songs/Vanessa da Mata - Ainda Bem (Áudio Oficial).mp3"></audio>
+  <header>
     <div class="container">
-      <div class="introduction">
-        <h2>Leia antes de continuar, boboca.</h2>
-        <p>Se você chegou aqui então conseguiu ler o QR code kkkkkkk, que bom!</p>
-        <p>
-          Eu não sou bom com palavras kkkkkkkkkk, mas fiz algo muito legal pra
-          você e espero que goste.
-        </p>
-        <p>
-          Aaaa, e demorou um pouquinho ksksksks. Comecei isso em maio, mas fui
-          juntando cada detalhezinho seu, então não fiz isso tudo aqui de uma
-          vez só ksksksks.
-        </p>
-        <p>
-          Vou tentar escrever os textos de um jeito que não fique tão robótico
-          ou clichê, tipo aqueles mimimi de sempre kksksks.
-        </p>
-        <p>
-          Então presta atenção em cada detalhe e vai respondendo as perguntinhas NA SINCERIDADE
-          pra ver umas coisinhas escondidas hehe.
-        </p>
-        <p>
-          Aaaa, já ia esquecendo! Bem do seu ladinho tem um botão de sorriso —
-          quero que clique nele toda vez que sorrir com algo
-          aqui ou quando achar algo tipo "wow" ksksksk.
-        </p>
-        <p>Bom, já falei demais... pode começar! ✨</p>
-      </div>
+      <h1 id="girlfriend-name">Para minha doce Ramy🧁</h1>
+      <p class="subtitle">
+        Cada segundo ao seu lado é como um passo mais perto do que eu
+        sempre sonhei 💞
+      </p>
+    </div>
+  </header>
 
-      <div class="interactive">
-<!-- Caixa de alerta personalizada -->
+  <div class="container">
+    <div class="introduction">
+      <h2>Leia antes de continuar, boboca.</h2>
+      <p>Se você chegou aqui então conseguiu ler o QR code kkkkkkk, que bom!</p>
+      <p>
+        Eu não sou bom com palavras kkkkkkkkkk, mas fiz algo muito legal pra
+        você e espero que goste.
+      </p>
+      <p>
+        Aaaa, e demorou um pouquinho ksksksks. Comecei isso em maio, mas fui
+        juntando cada detalhezinho seu, então não fiz isso tudo aqui de uma
+        vez só ksksksks.
+      </p>
+      <p>
+        Vou tentar escrever os textos de um jeito que não fique tão robótico
+        ou clichê, tipo aqueles mimimi de sempre kksksks.
+      </p>
+      <p>
+        Então presta atenção em cada detalhe e vai respondendo as perguntinhas NA SINCERIDADE
+        pra ver umas coisinhas escondidas hehe.
+      </p>
+      <p>
+        Aaaa, já ia esquecendo! Bem do seu ladinho tem um botão de sorriso —
+        quero que clique nele toda vez que sorrir com algo
+        aqui ou quando achar algo tipo "wow" ksksksk.
+      </p>
+      <p>Bom, já falei demais... pode começar! ✨</p>
+    </div>
+
+    <div class="interactive">
+      <!-- Caixa de alerta personalizada -->
       <div class="alert" id="alert">
         <div class="alert-content">
-            <p id="alertMessage"></p>
+          <p id="alertMessage"></p>
         </div>
-    </div>
+      </div>
 
       <div class="question-container" id="questionContainer">
         <div id="questionContent"></div>
       </div>
 
-       <div class="cartas-respostas">
+      <div class="cartas-respostas">
 
-       </div>
       </div>
-
-      
-    </div>
     </div>
 
-      <div class="introduction">
-        <h2>Lá embaixo ficam umas coisinhas massa, mas leia isso aqui antes</h2>
-        <p>
-          Agora vou explicar o motivo de querer tirar foto com você toda vez que
-          nos encontramos ksksks. É claro que eu quero registrar cada momento
-          com você, mas um dos motivos era pra selecionar cada foto nossa e
-          colocar aqui ksksks.
-        </p>
-        <p>
-          Você tá lendo algo que eu comecei em maio, e provavelmente nos outros
-          dias futuros eu ainda vou escrever mais aqui ksksk. Eu não sei se
-          mudei algum pensamento ou algo aqui, mas tenho certeza que melhorei
-          cada coisinha e, com certeza, falei muita coisa gay kksksk.
-        </p>
-        <p>
-          pode continuar, boboca.
-        </p>
-      </div>
 
-      <!-- Botão para revelar a galeria -->
-      <div class="reveal-gallery-button-container">
-        <button class="reveal-gallery-button" onclick="mostrarGaleria()">
-          📸 Clica aqui curiosa kkkkkkk
-        </button>
-      </div>
+  </div>
+  </div>
 
-      <div class="content-gallery hidden" id="galeriaFotos">
-        <div class="gallery">
-          <img
-            src="../assets/Captura de tela 2025-05-05 121303.png"
-            alt="Nossa foto 1"
-          />
-          <img
-            src="https://via.placeholder.com/200x200?text=Nossa+Foto+2"
-            alt="Nossa foto 2"
-          />
-          <img
-            src="https://via.placeholder.com/200x200?text=Nossa+Foto+3"
-            alt="Nossa foto 3"
-          />
-          <img
-            src="https://via.placeholder.com/200x200?text=Nossa+Foto+4"
-            alt="Nossa foto 4"
-          />
-          <img
-            src="https://via.placeholder.com/200x200?text=Nossa+Foto+5"
-            alt="Nossa foto 5"
-          />
+  <div class="introduction">
+    <h2>Lá embaixo ficam umas coisinhas massa, mas leia isso aqui antes</h2>
+    <p>
+      Agora vou explicar o motivo de querer tirar foto com você toda vez que
+      nos encontramos ksksks. É claro que eu quero registrar cada momento
+      com você, mas um dos motivos era pra selecionar cada foto nossa e
+      colocar aqui ksksks.
+    </p>
+    <p>
+      Você tá lendo algo que eu comecei em maio, e provavelmente nos outros
+      dias futuros eu ainda vou escrever mais aqui ksksk. Eu não sei se
+      mudei algum pensamento ou algo aqui, mas tenho certeza que melhorei
+      cada coisinha e, com certeza, falei muita coisa gay kksksk.
+    </p>
+    <p>
+      pode continuar, boboca.
+    </p>
+  </div>
+
+  <!-- Botão para revelar a galeria -->
+  <div class="reveal-gallery-button-container">
+    <button class="reveal-gallery-button" onclick="mostrarGaleria()">
+      📸 Clica aqui curiosa kkkkkkk
+    </button>
+  </div>
+
+  <h1 style="text-align: center;">HIHI</h1>
+  <div class="content-gallery hidden" id="galeriaFotos">
+    <div class="gallery-wrapper">
+      <div class="gallery">
+        <div class="gallery-container">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG-20250607-WA0108.jpg" class="active" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250503_222214.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250520_194541.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250603_175710.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250603_175820.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250603_175903.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250603_191127.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193414.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193416.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193449.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193451.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193515.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193540.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250612_193607.jpg" />
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_134642.jpg" />
         </div>
       </div>
     </div>
+  </div>
+  </div>
 
-    <div class="content-title-slide hidden" id="slide">
-      <h1 style="text-align: center">Mais foto nossa hehe</h1>
+  <div class="content-title-slide hidden" id="slide">
+    <h1 style="text-align: center">Mais foto nossa hehe</h1>
 
-      <div class="slider-container">
-        <div class="slider" id="slider">
-          <div class="slide">
-            <img
-              src="../assets/Captura de tela 2025-05-05 121303.png"
-              alt="Foto 1"
-            />
-          </div>
-          <div class="slide">
-            <img
-              src="https://via.placeholder.com/300x200?text=Foto+2"
-              alt="Foto 2"
-            />
-          </div>
-          <div class="slide">
-            <img
-              src="https://via.placeholder.com/300x200?text=Foto+3"
-              alt="Foto 3"
-            />
-          </div>
-          <div class="slide">
-            <img
-              src="https://via.placeholder.com/300x200?text=Foto+4"
-              alt="Foto 4"
-            />
-          </div>
+    <div class="slider-container">
+      <div class="slider" id="slider">
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_134650.jpg" alt="Foto 1" />
         </div>
-        <button class="prev" onclick="mudarSlide(-1)">❮</button>
-        <button class="next" onclick="mudarSlide(1)">❯</button>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_141748.jpg" alt="Foto 2" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_141748.jpg" alt="Foto 3" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_141753.jpg" alt="Foto 4" />
+        </div>
+         <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_142151.jpg" alt="Foto 4" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_142157.jpg" alt="Foto 1" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164756.jpg" alt="Foto 2" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164758.jpg" alt="Foto 3" />
+        </div>
+        <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164804.jpg" alt="Foto 4" />
+        </div>
+         <div class="slide">
+          <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164812.jpg" alt="Foto 4" />
+        </div>
       </div>
+      <button class="prev" onclick="mudarSlide(-1)">❮</button>
+      <button class="next" onclick="mudarSlide(1)">❯</button>
     </div>
-    <footer>
-      <div class="container">
-        <p class="footer-message">
-          Se você chegou até aqui, saiba que você é alguém muito especial,incrivel e que eu quero levar para
-          o resto da minha vida
-        </p>
-        <button class="surprise-btn" onclick="window.location.href='jogo.html'">
-          O que isso aqui faz?
-        </button>
-      </div>
-    </footer>
+  </div>
+  <footer>
+    <div class="container">
+      <p class="footer-message">
+       Se você chegou até aqui, saiba que é alguém muito especial, incrível e que eu quero levar comigo para o resto da minha vida... Continue sendo essa pessoa maravilhosa, sorridente, gentil e um tiquinho preconceituosa (brincadeirinha kkkkk). Enfim(kkkkkkkk), continue navegando... ainda tem mais por vir!
+      </p>
+      <button class="surprise-btn" onclick="window.location.href='jogo.html'">
+        O que isso aqui faz?
+      </button>
+    </div>
+  </footer>
 
-    <script src="../js/script.js"></script>
-    <script src="../js/carrosel.js"></script>
-    <script src="../js/button-count.js"></script>
-    <script src="../js/gallery.js"></script>
-    <script src="../js/slide.js"></script>
-    <script src="../js/download.js"></script>
-  </body>
+  <script src="../js/script.js"></script>
+  <script src="../js/carrosel.js"></script>
+  <script src="../js/button-count.js"></script>
+  <script src="../js/gallery.js"></script>
+  <script src="../js/slide.js"></script>
+  <script src="../js/download.js"></script>
+  <script src="../js/playsong.js"></script>
+</body>
+
 </html>
