--- a/templates/video.html
+++ b/templates/video.html
@@ -9,7 +9,7 @@
     <div id="ambient-light"></div>
 
     <div class="content">
-      <h1>Eu que fiz hehe 💖</h1>
+      <h1>Agora é seu hehe 💖</h1>
 
       <video id="video" controls crossorigin="anonymous">
         <source src="../assets/ramy_video.mp4" type="video/mp4" />
